--- a/Frontend/src/IndividualKnowTheCraft.module.css
+++ b/Frontend/src/IndividualKnowTheCraft.module.css
@@ -57,13 +57,21 @@
     /* border: 2px solid yellow; */
     /* min-width: 50%; */
     width: 50%;
-    /* max-height: 400px; */
+
+    height: 500px;
+}
+.image{
+    /* border: 2px solid green; */
+    overflow: hidden;
 }
 
 
 .image img{
     /* max-width: ; */
-    max-height: 400px;
+    /* max-height: 400px; */
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 .image-flex-end{
     display: flex;
