--- a/Frontend/src/IndividualProduct.module.css
+++ b/Frontend/src/IndividualProduct.module.css
@@ -5,9 +5,17 @@
     display: flex;
     gap: 100px;
 }
+.one-picture{
+    width: 610px;
+    height: 610px;
+    border-radius: 4px;
+    overflow: hidden;
+}
 .one-picture img{
-    width: 600px;
-    max-height: 760px;
+    width: 100%;
+    height: 100%;
+    /* object-fit: cover; */
+    /* max-height: 760px; */
 }
 .seller-info{
     display: flex;
@@ -18,7 +26,7 @@
     border-radius: 4px;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 50%;
     padding: 35px;
 }
 .basic-info{
@@ -60,4 +68,35 @@
     height: 44px;
     border: transparent;
     background-color: var(--secondary-background-color);
+}
+.border-accent{
+    border: 2px solid var(--accent-color);
+}
+.image-gallary{
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 3px;
+}
+.image-gallary img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.more-pictures{
+    display: flex;
+    gap: 7px;
+}
+.product-picture{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+.wishlist{
+    /* border: 2px solid red; */
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 18px;
 }
