--- a/Frontend/src/Community_home.module.css
+++ b/Frontend/src/Community_home.module.css
@@ -7,7 +7,7 @@
 }
 .container {
     width: 1300px;
-    height: 90vh;
+    /* height: 90vh; */
     margin: auto;
     border: 2px solid #E9E9E9;
     border-radius: 10px;
@@ -16,16 +16,16 @@
 .container .up {
     width: 100%;
     height: 90%;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
 }
 .container .down {
     width: 100%;
-    height: 60px;
-    border: 1px solid black;
+    height: 120px;
+    border: 1px solid rgb(229, 223, 223);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: white;
+    background-color: rgb(245, 245, 245);
 }
 .container .down .image {
     width: 100%;
@@ -54,8 +54,8 @@
 }
 .container .down > button {
     margin: auto;
-    width: 20%;
-    height: 60%;
+    width: 14%;
+    height: 50%;
     border-radius: 10px;
     background-color: var(--button);
     color: var(--text-color);
