--- a/Frontend/src/Components/message_pic.module.css
+++ b/Frontend/src/Components/message_pic.module.css
@@ -71,15 +71,19 @@
     font-weight: 400;
   }
   .another .anotherone .like {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    /* border-left: 1px solid black; */
     width: 100%;
     height: auto;
     margin: 3px 0px;
     border: 1px solid rgb(180, 179, 180);
   }
   .another .anotherone .like > i{
+  
     margin-top: 10px;
     font-size: 2.9em;
-    margin-left: 230px;
   }
 
   
