--- a/Frontend/src/Components/message_txt.module.css
+++ b/Frontend/src/Components/message_txt.module.css
@@ -72,6 +72,9 @@
     font-weight: 400;
   }
   .another .anotherone .like {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     width: 100%;
     height: auto;
     margin: 3px 0px;
@@ -80,7 +83,6 @@
   .another .anotherone .like > i{
     margin-top: 10px;
     font-size: 2.5em;
-    margin-left: 230px;
   }
 
   
