--- a/Frontend/src/Messaging.module.css
+++ b/Frontend/src/Messaging.module.css
@@ -35,10 +35,10 @@
 .container .top .right {
     width: 100%;
     height: 100%;
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid rgb(205, 203, 203);
     display: flex;
     justify-content: space-between;
-    box-shadow: 2px 2px 2px var(--primary-color);
+    /* box-shadow: 2px 2px 2px var(--primary-color); */
     background: border-box;
 }
 
@@ -70,9 +70,10 @@
 .container .middle .left {
     width: 17%;
     height: 100%;
-    border: 1px solid black;
+    border: 1px solid rgb(144, 141, 141);
     cursor: pointer;
     box-shadow: inset -3px 0px 5px cadetblue;
+    overflow-y: scroll;
 }
 
 
@@ -116,7 +117,7 @@
 .container .middle .right .down {
     width: 83%;
     height: 10%;
-    border: 1px solid black;
+    border: 1px solid rgb(144, 141, 141);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -129,7 +130,7 @@
     height: 60%;
     border-radius: 20px;
     margin: auto;
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid rgb(144, 141, 141);
 }
 
 .container .middle .right .down > button {
