--- a/Frontend/src/Components/message_pic.module.css
+++ b/Frontend/src/Components/message_pic.module.css
@@ -78,10 +78,10 @@
     width: 100%;
     height: auto;
     margin: 3px 0px;
-    border: 1px solid rgb(180, 179, 180);
+    border-top: 1px solid rgb(180, 179, 180);
   }
   .another .anotherone .like > i{
-  
+    cursor: pointer;
     margin-top: 10px;
     font-size: 2.9em;
   }
