--- a/Frontend/src/Components/CraftsForm.module.css
+++ b/Frontend/src/Components/CraftsForm.module.css
@@ -55,6 +55,7 @@
     /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); */
     padding: 3px 15px;
     font-size: 18px;
+    text-decoration: none;
     cursor: pointer;
     /* font-size: 1.2em; */
 }
